--- a/book/spanish/content/ch02-starting-to-code.html
+++ b/book/spanish/content/ch02-starting-to-code.html
@@ -8,7 +8,7 @@
 
 <p>Primero, necesitar&#xE1;s un <a contenteditable="false" data-primary="code editors" data-type="indexterm"></a>editor de c&#xF3;digo. Un editor de c&#xF3;digo es similar a un editor de texto (como Bloc de notas), excepto que posee una funcionalidad especial para editar c&#xF3;digo en vez de texto plano. Puedes usar cualquier editor que quieras; te recomendamos <a href="https://atom.io/">Atom</a> y <a href="http://brackets.io/">Brackets</a>, ambos disponibles para descarga.</p>
 
-<p>Tambi&#xE9;n existe un editor oficial de p5.js en desarrollo. Si lo quieres usar, lo puedes descargar visitando <a href="http://p5js.org/download"><em class="hyperlink">http://p5js.org/download</em></a> y seleccionando el bot&#xF3;n que dice "Editor." Si est&#xE1;s usando el editor de p5.js, puedes saltar a la secci&#xF3;n <a data-type="xref" href="#your-first-program">#tu-primer-programa</a>.</p>
+<p>Tambi&#xE9;n existe un editor oficial de p5.js en desarrollo. Si lo quieres usar, lo puedes descargar visitando <a href="http://p5js.org/download"><em class="hyperlink">http://p5js.org/download</em></a> y seleccionando el bot&#xF3;n que dice "Editor." Si est&#xE1;s usando el editor de p5.js, puedes saltar a la secci&#xF3;n <a data-type="xref" href="#your-first-program">Tu-primer-programa</a>.</p>
 </section>
 
 <section data-type="sect1">
@@ -87,7 +87,7 @@ function draw() {
 <section data-type="sect2">
 <h2>Ejemplo 2-2: hacer c&#xED;rculos</h2>
 
-<p>Borra <a contenteditable="false" data-primary="circles" data-secondary="drawing" data-type="indexterm" id="c2d">&nbsp;</a>el texto del ejemplo anterior, y prueba este. Graba tu c&#xF3;digo, y refresca (Command-R) <em>index.html</em> en tu navegador para verlo actualizado.</p>
+<p>Borra <a contenteditable="false" data-primary="circles" data-secondary="drawing" data-type="indexterm" id="c2d"></a>el texto del ejemplo anterior, y prueba este. Graba tu c&#xF3;digo, y refresca (Command-R) <em>index.html</em> en tu navegador para verlo actualizado.</p>
 
 <figure><img alt="Ex 02 02" src="images/gspj_02in03.png" />
  <figcaption/>
@@ -123,7 +123,7 @@ function draw() {
 	<li>En Internet Explorer, abre F12 Developer Tools, luego selecciona la Console tool.</li>
 </ul>
 
-<p>Ahora deber&#xED;as ver un recuadro en la parte inferior o lateral de tu pantalla (<a data-type="xref" href="#Fig_02_01">Figura 2-1</a>). Si hay un error de tipeo u otro <a contenteditable="false" data-primary="error messages, in console" data-type="indexterm" id="em2ic">&nbsp;</a>error en tu programa, aparecer&#xE1; texto rojo explicando qu&#xE9; error es. Este texto puede a veces ser cr&#xED;ptico, pero si revisas al lado derecho de la l&#xED;nea, estar&#xE1; el nombre del archivo y el n&#xFA;mero de la l&#xED;nea de c&#xF3;digo donde fue detectado el error. Ese es un lugar adecuado donde empezar a buscar errores en tu programa.</p>
+<p>Ahora deber&#xED;as ver un recuadro en la parte inferior o lateral de tu pantalla (<a data-type="xref" href="#Fig_02_01">Figura 2-1</a>). Si hay un error de tipeo u otro <a contenteditable="false" data-primary="error messages, in console" data-type="indexterm" id="em2ic"></a>error en tu programa, aparecer&#xE1; texto rojo explicando qu&#xE9; error es. Este texto puede a veces ser cr&#xED;ptico, pero si revisas al lado derecho de la l&#xED;nea, estar&#xE1; el nombre del archivo y el n&#xFA;mero de la l&#xED;nea de c&#xF3;digo donde fue detectado el error. Ese es un lugar adecuado donde empezar a buscar errores en tu programa.</p>
 
 <!--
 <div data-nickname="akaziuna" data-type="comment">
@@ -159,9 +159,9 @@ function draw() {
 <section data-type="sect1">
 <h1>Ejemplos y referencia</h1>
 
-<p>Aprender &nbsp;<a contenteditable="false" data-primary="Reference page" data-type="indexterm">&nbsp;</a><a contenteditable="false" data-primary="Examples page" data-type="indexterm">&nbsp;</a>a programar con p5.js involucra explorar mucho c&#xF3;digo: ejecutarlo, alterarlo, romperlo y mejorarlo hasta que lo hayas reconfigurado en algo novedoso.  Con esto en mente, el sitio web de p5.js tiene docenas de ejemplos que demuestran diferentes caracter&#xED;sticas de la biblioteca. Visita la <a href="http://p5js.org/examples">pag&#xED;na de Ejemplos</a> para verlos. Puedes jugar con ellos editanto el c&#xF3;digo en la p&#xE1;gina y luego haciendo click en "Ejecutar." Los ejemplos est&#xE1;n agrupados en distintas categor&#xED;as seg&#xFA;n su funci&#xF3;n, como forma, color, e imagen. Encuentra un tema que te interese en la lista y prueba un ejemplo.</p>
+<p>Aprender <a contenteditable="false" data-primary="Reference page" data-type="indexterm"></a><a contenteditable="false" data-primary="Examples page" data-type="indexterm"></a>a programar con p5.js involucra explorar mucho c&#xF3;digo: ejecutarlo, alterarlo, romperlo y mejorarlo hasta que lo hayas reconfigurado en algo novedoso.  Con esto en mente, el sitio web de p5.js tiene docenas de ejemplos que demuestran diferentes caracter&#xED;sticas de la biblioteca. Visita la <a href="http://p5js.org/examples">pag&#xED;na de Ejemplos</a> para verlos. Puedes jugar con ellos editanto el c&#xF3;digo en la p&#xE1;gina y luego haciendo click en "Ejecutar." Los ejemplos est&#xE1;n agrupados en distintas categor&#xED;as seg&#xFA;n su funci&#xF3;n, como forma, color, e imagen. Encuentra un tema que te interese en la lista y prueba un ejemplo.</p>
 
-<p>Si ves una parte del programa con la que no est&#xE1;s familiarizado o sobre la que quieres aprender su funcionalidad, visita la<a href="http://p5js.org/reference/"><em>Referencia de p5.js</em></a>.</p>
+<p>Si ves una parte del programa con la que no est&#xE1;s familiarizado o sobre la que quieres aprender su funcionalidad, visita la <a href="http://p5js.org/reference/"><em>Referencia de p5.js</em></a>.</p>
 
 <p>La <em>Referencia de p5.js</em> explica cada elemento de c&#xF3;digo con una descripci&#xF3;n y ejemplos. Los programas de la <em>Referencia</em> son mucho m&#xE1;s cortos (usualmente cuatro o cinco l&#xED;neas) y m&#xE1;s f&#xE1;ciles de seguir que los ejemplos de la p&#xE1;gina Aprende. Ten en cuenta que estos ejemplos usualmente omiten <code>setup()</code> y <code>draw()</code> por simplicidad, pero estas l&#xED;neas de c&#xF3;digo que ves deber&#xE1;n ser puestas dentro de uno de estos bloques para poder ser ejecutadas. Recomendamos mantener la p&#xE1;gina de <em>Referencia</em> abierta mientras est&#xE9;s leyendo este libro y mientras est&#xE9;s programando. Puede ser navegada por tema o usando la barra de b&#xFA;squeda en la parte superior de la p&#xE1;gina.</p>
 
