--- a/book/spanish/content/ch10-objects.html
+++ b/book/spanish/content/ch10-objects.html
@@ -40,7 +40,7 @@
 
 <p>Elige nombres claros para tus propiedades. Las propiedades de un objeto pueden almacenar cualquier tipo de datos. Un objeto puede almacenar al mismo tiempo muchos booleans, n&#xfa;meros, imagenes, strings, etc. Ten en cuenta que una raz&#xf3;n para construir un objeto es agrupar elementos relacionados. Para tus m&#xe9;todos, selecciona nombres claros y decide los valores de retorno (si tienen). Los m&#xe9;todos son usados para modificar los valores de las propiedades y para realizar acciones basadas en los valores de las propiedades.</p>
 
-<p>Para nuestra primera funci&#xF3;n constructor, convertiremos el <a data-type="xref" href="#ex-8-9">#ej-8-9</a> del libro. Empezamos por hacer una lista de las propiedades del ejemplo:</p>
+<p>Para nuestra primera funci&#xF3;n constructor, convertiremos el <a data-type="xref" href="#ex-8-9">Ejemplo 8-9</a> del libro. Empezamos por hacer una lista de las propiedades del ejemplo:</p>
 
 <pre data-code-language="p5js" data-type="programlisting">
 var x
@@ -198,7 +198,7 @@ Los tres n&#xFA;meros dentro de los par&#xE9;ntesis son los par&#xE1;metros pasa
 <section data-type="sect2">
 <h2>Ejemplo 10-2: crea m&#xFA;ltiples objetos</h2>
 
-<p>En el <a data-type="xref" href="#ex-10-1">#ej-10-1</a>, <a contenteditable="false" data-primary="objects" data-secondary="multiple" data-type="indexterm" id="o10m">&nbsp;</a>vimos algo nuevo: el punto que es usado para acceder a los m&#xE9;todos del objeto dentro de <code>draw()</code>. El operador punto es usado para unir el nombre del objeto con sus propiedades y m&#xE9;todos. Es an&#xE1;logo a la manera en que usamos<a contenteditable="false" data-primary="this keyword" data-type="indexterm">&nbsp;</a> <code>this.</code> dentro de la funci&#xF3;n constructor, pero cuando nos referimos a esto fuera del constructor, <code>this</code> es reemplazado por el nombre de la variable.</p>
+<p>En el <a data-type="xref" href="#ex-10-1">Ejemplo 10-1</a>, <a contenteditable="false" data-primary="objects" data-secondary="multiple" data-type="indexterm" id="o10m">&nbsp;</a>vimos algo nuevo: el punto que es usado para acceder a los m&#xE9;todos del objeto dentro de <code>draw()</code>. El operador punto es usado para unir el nombre del objeto con sus propiedades y m&#xE9;todos. Es an&#xE1;logo a la manera en que usamos<a contenteditable="false" data-primary="this keyword" data-type="indexterm">&nbsp;</a> <code>this.</code> dentro de la funci&#xF3;n constructor, pero cuando nos referimos a esto fuera del constructor, <code>this</code> es reemplazado por el nombre de la variable.</p>
 
 <p>Esto se vuelve m&#xE1;s claro en este ejemplo, donde se hacen dos objetos a partir del mismo constructor. La funci&#xF3;n <code>jit.move()</code> se refiere al m&#xE9;todo <code>move()</code> que pertenece al objeto <code>jit</code>, y <code>bug.move()</code> se refiere al m&#xE9;todo <code>move()</code> que pertenece al objeto llamado <code>bug</code>:</p>
 
